# det3d

./: .gitignore  .tmp_det_infer_sidecar_test.json  AGENTS.md  FUNCTIONS.md  README.md  molten_toy.ipynb  pyproject.toml
.cursor/rules/: def-hdf5-chu.mdc  mirror-fran-data-managers.mdc
archived/: README.md
det3d/: collate.py
det3d/callback/: __init__.py  case_recorder_det.py
det3d/configs/: parser.py
det3d/detection/: generate_transforms.py  lidc_datalist.py  luna16_testing.py  luna16_training2.py  luna16_training22.py  luna16_training2_scratch_import_test.py  luna16_training_bk.py  luna16_training_dm_hybrid.py  luna16_transform_journey.ipynb  luna16_transform_journey.lab.py  luna16_transform_journey.md  luna16_transform_journey.py  open_journey_notebook.sh  preprocess_images.py  retinanet_detector2.py  retinanet_train.py  visualize_image.py
det3d/evaluation/: coco.py
det3d/extra/: trainer.py
det3d/geometry/: affine.py  lmg.py
det3d/inference/: __init__.py  cascade.py  hybrid_lbd.py  patch.py  transforms.py  visualize.py
det3d/managers/: data.py  retinanet.py  retinanet_bk.py
det3d/preprocessing/: build_json.py  dataset_details.py  label_bounded.py  labelbounded.py  object_bounded.py  paths.py  run_build.py
det3d/trainers/: __init__.py  trainerdet.py  trainerdet_rt.py  transferdet.py
det3d/training/: trainer.py
det3d/transforms/: bbox_stats.py  crop_indices.py  (+4 more)
nbs/: Untitled.lab.py  luna16_retinanet_network_tutorial.ipynb  luna16_retinanet_network_tutorial.lab.ipynb  luna16_retinanet_network_tutorial.lab.py  luna16_retinanet_network_tutorial.md
(+21 files in other folders)
