[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "det"
version = "0.1.0"
description = "MONAI 3D RetinaNet detection on custom datasets via fran Lightning engines."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Usman Bashir" }]
dependencies = [
  "fran",
  "label_analysis",
  "utilz",
  "monai>=1.3",
  "lightning>=2.0",
  "torch>=2.0",
  "nibabel",
  "opencv-python",
  "pandas",
  "openpyxl",
  "tqdm",
]

[tool.setuptools.packages.find]
include = ["det*"]
